# fsapi

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  sapi.py
.claude/frontend-design/: SKILL.md
.claude/sapi-cli/: SKILL.md
.claude/sapi-cli/references/: command-patterns.md
.claude/sapi-migrations/: SKILL.md
.claude/sapi-migrations/references/: migration-patterns.md
.claude/sapi-query/: SKILL.md
.claude/sapi-query/references/: query-examples.md
lib/: pg.py  utils.py
routers/: home.py
tests/: conftest.py
views/: home.html
